--- a/less/global/base.less
+++ b/less/global/base.less
@@ -1,21 +1,21 @@
 body {
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-family: "Myriad Pro Regular", "Arial", sans-serif;
   background-color: #fff;
   color: #000000;
 }
 
 h1 {
-  font-size: 27px;
-  line-height: 30px;
-  color: #231f20;
-  font-weight: bold;
+  font-size: 60px;
+  line-height: 75px;
+  color: #282828;
+  font-weight: 300;
   text-align: center;
   margin: 0;
 }
 
 h2 {
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 40px;
+  line-height: 50px;
   color: #000000;
   font-weight: bold;
   margin: 0;
