--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -1,21 +1,18 @@
 @font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  src:
-    local("Open Sans"),
-    local("OpenSans"),
-    url("../../fonts/opensans.woff2") format("woff2"),
-    url("../../fonts/opensans.woff") format("woff");
+    font-family: "Myriad Pro Regular";
+    font-style: normal;
+    font-weight: 400;
+    src:
+      local("Myriad Pro Regular"),
+      local("MyriadProRegular"),
+    url("../../fonts/MyriadProRegular.woff") format("woff"),
 }
-
 @font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  src:
-    local("Open Sans Bold"),
-    local("OpenSans-Bold"),
-    url("../../fonts/opensansbold.woff2") format("woff2"),
-    url("../../fonts/opensansbold.woff") format("woff");
+    font-family: "Myriad Pro Bold";
+    font-style: normal;
+    font-weight: 700;
+    src:
+      local("Myriad Pro Bold.woff"),
+      local("MyriadProBold.woff"),
+    url("../../fonts/MyriadProBold.woff") format("woff"),
 }
