--- a/less/style.less
+++ b/less/style.less
@@ -3,23 +3,4 @@
 @import "global/fonts.less";
 @import "global/base.less";
 @import "blocks/page-header.less";
-@import "blocks/main-header.less";
-@import "blocks/reviews.less";
-@import "blocks/page-preview.less";
-@import "blocks/about.less";
-@import "blocks/contacts.less";
-@import "blocks/page-footer.less";
-@import "blocks/featured.less";
-@import "blocks/catalog.less";
-@import "blocks/video.less";
-@import "blocks/order-form";
-@import "blocks/filter-type.less";
-@import "mixin.less";
-@import "blocks/filter-color.less";
-@import "blocks/user-info.less";
-@import "blocks/user-contacts.less";
-@import "blocks/additionally.less";
-@import "blocks/main-nav.less";
-@import "blocks/zigzag-line.less";
-@import "blocks/popap.less";
-@import "blocks/map.less";
+@import "blocks/section-design.less";
