--- a/less/global/base.less
+++ b/less/global/base.less
@@ -15,7 +15,10 @@ h1 {
 
 h2 {
   font-size: 40px;
-  line-height: 50px;
+  line-height: 50
+
+
+  px;
   color: #000000;
   font-weight: bold;
   margin: 0;
