--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@mint-color: #63d1bb;
+@pink-color: #ff6d6d;
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
 @mobile-widths-only: ~"(max-width: 767px)";
