--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -27,7 +27,7 @@
   width: 190px;
   height: 50px;
   border: none;
-  background-color: #ff6d6d;
+  background-color: @pink-color;
   margin: 0 auto;
   display: block;
   margin-top: 20px;
