--- a/less/blocks/section-design.less
+++ b/less/blocks/section-design.less
@@ -3,9 +3,15 @@
   flex-direction: row;
   &__left-column{
     width: 50%;
-    padding: 100px 150px
+    padding: 100px 150px;
+    padding-top: 170px;
   }
   &__right-column{
     width: 50%;
   }
+}
+.red-title{
+  font-style: 16px;
+  line-height: 50px;
+  color: @pink-color;
 }
