--- a/less/global/base.less
+++ b/less/global/base.less
@@ -1,5 +1,5 @@
 body {
-  font-family: "Myriad Pro Regular", "Arial", sans-serif;
+  font-family: "Exo", "Arial", sans-serif;
   background-color: #fff;
   color: #000000;
 }
