--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -1,18 +1,18 @@
 @font-face {
-    font-family: "Myriad Pro Regular";
+    font-family: "Exo-Regula";
     font-style: normal;
     font-weight: 400;
     src:
-      local("Myriad Pro Regular"),
-      local("MyriadProRegular"),
-    url("../../fonts/MyriadProRegular.woff") format("woff"),
+      local("Exo-Regula.ttf"),
+      local("ExoRegular.ttf"),
+    url("../../fonts/Exo-Regular.ttf") format("ttf"),
 }
 @font-face {
-    font-family: "Myriad Pro Bold";
+    font-family: "Exo-Bold";
     font-style: normal;
     font-weight: 700;
     src:
-      local("Myriad Pro Bold.woff"),
-      local("MyriadProBold.woff"),
-    url("../../fonts/MyriadProBold.woff") format("woff"),
+      local("Exo-Bold.ttf"),
+      local("ExoBold.ttf"),
+    url("../../fonts/MyriadProBold.woff") format("ttf"),
 }
