--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -3,7 +3,7 @@
   background: url("../img/header-bg.jpg") no-repeat;
   background-size: cover;
   &__wrapper{
-    width: 600px;
+    width: 720px;
     margin: 0 auto;
     padding: 215px 0;
     padding-bottom: 200px;
@@ -20,7 +20,7 @@
   }
   &__condition{
     display: block;
-    padding-left: 200px;
+    text-align: center;
   }
 }
 .btn-try-now{
