--- a/less/style.less
+++ b/less/style.less
@@ -4,3 +4,6 @@
 @import "global/base.less";
 @import "blocks/page-header.less";
 @import "blocks/section-design.less";
+@import "blocks/features.less";
+@import "blocks/description.less";
+@import "blocks/clients";
