--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
 @pink-color: #ff6d6d;
+@grey-bg-color:#f6f5f3;
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
 @mobile-widths-only: ~"(max-width: 767px)";
