--- a/less/global/base.less
+++ b/less/global/base.less
@@ -14,21 +14,20 @@ h1 {
 }
 
 h2 {
+  font-weight: normal;
+  letter-spacing: 1.6px;
   font-size: 40px;
-  line-height: 50
-
-
-  px;
+  line-height: 50px;
   color: #000000;
-  font-weight: bold;
   margin: 0;
 }
 
 h3 {
-  font-size: 17px;
+  font-size: 22px;
   margin: 0;
-  font-weight: bold;
-  line-height: 24px;
+  font-weight: 500;
+  line-height: 50px;
+  letter-spacing: 1.3px;
 }
 
 a {
