добавил блок с формой

--- a/less/style.less
+++ b/less/style.less
@@ -7,3 +7,5 @@
 @import "blocks/features.less";
 @import "blocks/description.less";
 @import "blocks/clients";
+@import "blocks/browser.less";
+@import "blocks/try-now.less";
