--- a/less/blocks/clients.less
+++ b/less/blocks/clients.less
@@ -1,41 +1,51 @@
-.clients{
+.clients {
   background: url("../img/clients-bg.png") no-repeat;
   width: 100%;
   height: 63%;
   background-size: cover;
-  &__wrapper{
+  &__wrapper {
     display: flex;
     justify-content: space-between;
     padding-left: 154px;
     padding-right: 150px;
     padding-top: 110px;
   }
+  &__footer {
+    display: flex;
+    padding-left: 154px;
+    padding-right: 150px;
+    justify-content: space-around;
+  }
 }
-.clients__item{
+
+.clients__item {
   width: 355px;
   text-align: center;
-  & h3{
+  & h3 {
     color: #fff;
     margin-bottom: -6px;
   }
 }
-.clients__photo{
+
+.clients__photo {
   display: block;
   margin: 0 auto;
   width: 76px;
   height: 76px;
-  background-color:#4e4e5e;
+  background-color: #4e4e5e;
   margin-bottom: 10px;
 }
-.clients__name-company{
+
+.clients__name-company {
   color: #ff6d6d;
 
 }
-.clients__text-opinion{
+
+.clients__text-opinion {
   color: #b4b4b6;
   margin: 0;
   padding: 0;
   padding-top: 30px;
-  line-height:26px;
+  line-height: 26px;
   letter-spacing: 0.8px;
 }
